fix scrollbar appearing on 3 card layout

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,7 +42,7 @@ body {
 .cards-ctn {
   max-width: 100%;
   display: flex;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .card-ctn {
